# premiere

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  pyproject.toml
.agent/: TASKS.md
.agent/sessions/: 2026-02-04.md  2026-02-04_260203-processing.md  README.md
.agents/: README.md
.agents/PRDS/: biome-format-on-save-and-commit.md  premiere-transcript-editing-skill.md
.agents/SESSIONS/: 2026-02-03.md
.agents/TASKS/: biome-format-on-save-and-commit.md  premiere-transcript-editing-skill.md
.agents/memory/: premiere-workflow.md
.agents/sessions/: 2026-02-03.md  2026-02-04-adobe-mcp-setup.md  2026-02-04.md  2026-02-04_260203-processing.md  2026-06-11-premiere-cut-failure.md  2026-06-23-premiere-loop-cut.md  README.md
.claude/: settings.json
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: ci.yml  secret-scan.yml
app/: README.md  pyproject.toml
app/src/premiere/: __init__.py  jobs.py  main.py  pipeline.py  worker.py
app/src/premiere/downloaders/: __init__.py
app/src/premiere/generators/: __init__.py  transcription.py
app/src/premiere/processors/: __init__.py  music.py  silence.py
app/src/premiere/uploaders/: __init__.py
app/src/premiere/utils/: config.py
app/tests/: conftest.py  test_silence.py  test_video.py
apps/premiere/: README.md
apps/premiere/adobe-mcp/: .gitignore  PREMIERE_MCP_WORKFLOW.md  PREMIERE_PIPELINE_SETUP.md  README.md  SETUP_WINDOWS.md  bridge.py  jsx_runner.py  premiere_tools.py  pyproject.toml  requirements-test.txt  requirements.txt  run-tests.bat  run-tests.ps1
apps/premiere/adobe-mcp/adobe_mcp/: __init__.py  proxy.py
apps/premiere/adobe-mcp/adobe_mcp/illustrator/: __main__.py
apps/premiere/adobe-mcp/adobe_mcp/premiere/: command_runner.py  server.py  tools.py
apps/premiere/adobe-mcp/adobe_mcp/shared/: __init__.py
apps/premiere/adobe-mcp/proxy-server/: package-lock.json  package.json  proxy.js
apps/premiere/adobe-mcp/uxp-plugins/illustrator/: package.json
apps/premiere/adobe-mcp/uxp-plugins/photoshop/commands/: layers.js
apps/premiere/adobe-mcp/uxp-plugins/premiere/: manifest.json  package.json
apps/premiere/adobe-mcp/uxp-plugins/premiere/commands/: index.js
apps/premiere/scripts/: apply-cuts.jsx  batch-operations.jsx
apps/premiere/scripts/legacy-extendscript/: README.md  add-markers.jsx
apps/premiere/skills/premiere-mcp-ops/: SKILL.md
apps/premiere/skills/premiere-transcript-edit/: SKILL.md
config/: default.yaml
docs/: PRD.md  WORKFLOW.md
mcp/adobe-mcp/: .gitignore  LICENSE  PREMIERE_PIPELINE_SETUP.md  README.md  SETUP_WINDOWS.md  bridge.py  check-env.ps1  install.bat  install.ps1  launch-windows.bat  premiere_tools.py  requirements.txt
mcp/adobe-mcp/.claude/: project-analysis.md
mcp/adobe-mcp/adobe_mcp/: __init__.py  proxy.py
mcp/adobe-mcp/adobe_mcp/indesign/: __main__.py
mcp/adobe-mcp/adobe_mcp/photoshop/: __main__.py  server.py
mcp/adobe-mcp/adobe_mcp/premiere/: __init__.py  __main__.py  server.py
mcp/adobe-mcp/adobe_mcp/shared/: __init__.py  adobe_detector.py  core.py  socket_client.py
mcp/adobe-mcp/proxy-server/: proxy.js
mcp/adobe-mcp/tests/: test_illustrator.py
mcp/adobe-mcp/uxp-plugins/illustrator/: main.js
mcp/adobe-premiere-mcp/: PREMIERE_PIPELINE_SETUP.md  README.md  bridge.py  jsx_runner.py  launch.ps1  pyproject.toml
mcp/adobe-premiere-mcp/adobe_mcp/illustrator/: __init__.py  server.py
mcp/adobe-premiere-mcp/adobe_mcp/indesign/: __init__.py  server.py
mcp/adobe-premiere-mcp/adobe_mcp/photoshop/: __init__.py
mcp/adobe-premiere-mcp/proxy-server/: proxy.js
mcp/adobe-premiere-mcp/tests/: __init__.py
mcp/adobe-premiere-mcp/uxp-plugins/premiere/: main.js
mcp/premiere-mcp/: README.md  WORKFLOW.md  __init__.py  pyproject.toml
mcp/premiere-mcp/tools/: __init__.py  export.py
mcp/premiere-python-mcp/: README.md  WORKFLOW.md  server.py
mcp/premiere-python-mcp/tools/: analyze.py  download.py  process.py
scripts/: add-markers.jsx  apply-cuts.jsx  batch-operations.jsx  create-sequence.jsx  export-sequence.jsx  import-media.jsx
skills/livestream-story-edit/: SKILL.md
skills/premiere-mcp-ops/: SKILL.md
skills/premiere-transcript-edit/: SKILL.md
src/premiere/: jobs.py  main.py  pipeline.py  ui.py  worker.py
src/premiere/downloaders/: youtube_dl.py
src/premiere/generators/: __init__.py  clips.py  metadata.py  thumbnail.py  transcription.py
src/premiere/processors/: audio.py  silence.py  video.py
src/premiere/uploaders/: youtube.py
src/premiere/utils/: __init__.py  claude_cli.py  config.py  ffmpeg.py  logger.py  retry.py
tests/: __init__.py  test_audio.py  test_config.py  test_ffmpeg.py  test_metadata.py  test_pipeline.py  test_retry.py  test_silence.py  test_thumbnail.py  test_transcription.py
(+6 files in other folders)
