[project]
name = "premiere-workspace"
version = "0.1.0"
description = "Premiere Hybrid Editing System - Python app + Adobe MCP + ExtendScript"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
