[project]
name = "premiere-mcp"
version = "0.1.0"
description = "MCP server for Premiere video processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
premiere-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
