[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adobe-premiere-mcp"
version = "1.0.0"
description = "MCP server for editing inside Adobe Premiere Pro"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Adobe MCP Contributors"},
]
dependencies = [
    "fastmcp>=0.5.0",
    "mcp>=1.1.1",
    "python-socketio>=5.0.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
adobe-premiere = "adobe_mcp.premiere:main"
adobe-proxy = "adobe_mcp.proxy:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["adobe_mcp"]
